--- a/.config
+++ b/.config
@@ -1,1 +1,3 @@
 # This is an empty file, please overwrite it after generating the .config file with the source code
+CONFIG_TARGET_ipq95xx=y
+CONFIG_TARGET_ipq95xx_DEVICE_askey_sbe1v1k=y
